Working on myThrottle

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="clock.js"></script> -->
-    <script src="myBind.js"></script>
-    <title>Document</title>
+    <!-- <script src="myBind.js"></script> -->
+    <!-- add_numbers need to run in terminal -->
+    <!-- absurdBubbleSort.js needs to run in terminal -->
+    <title>JS - Intro to callbacks</title>
 </head>
-<body>
+<body style="background-color: darkblue ;">
+<strong style="color:red">Intro to Callbacks Exercises</strong>
 
-    
+<p style="color: white"> absurd ßubbleSort</p>
+<img src="https://www.thesprucepets.com/thmb/7YGQUU_FYAd2XCNmnW_9_jKcDZU=/5762x0/filters:no_upscale():strip_icc()/siamese-fighting-fish-bettas-1378308-hero-f459084da1414308accde7e21001906c.jpg" width="600" height="auto">    
 </body>
 </html>
